Fixed issue with weapon stats table not aligning properly, and not working in FF

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -75,7 +75,15 @@ img.Red {
 }
 
 .txtnowrap {
-  white-space:nowrap;
+  /*white-space:nowrap;*/
+}
+
+.weaponStatWeapon {
+  min-width: 53px;
+}
+
+.weaponStatPlayer {
+  min-width: 150px;
 }
 
 .infoBox {
